--- a/sections/product-template.liquid
+++ b/sections/product-template.liquid
@@ -222,6 +222,9 @@
             {% endif %}
 
             <div class="grid">
+              <div class="grid__item">
+                <div class="ro_widget"></div>
+              </div>
               {% if section.settings.product_quantity_enable %}
                 <div class="grid__item medium-up--one-third">
                   {%- if use_pallet -%}
