--- a/templates/customers/account.liquid
+++ b/templates/customers/account.liquid
@@ -52,6 +52,8 @@
   <hr class="hr--clear hr--small">
 
   <h2 class="account-subtitle">{{ 'customer.account.details' | t }}</h2>
+  
+  <p><a href="/tools/checkout/api/manage/subscription/app" class="text-link">Manage Subscription</a></p>
 
   <div class="grid">
     <div class="grid__item medium-up--one-third">
